[package]
name = "xsrf"
version = "0.1.0"
authors = ["Naitik Shah <n@daaku.org>"]
edition = "2018"
description = "A library to provide Cross-site request forgery protection primitives."
readme = "readme.md"
repository = "https://github.com/daaku/xsrf"
keywords = ["xsrf", "csrf", "cross-site"]
categories = []
license = "MIT"

[dependencies]
base64 = "0.12"
rand = "0.7"
subtle = "2.2"
thiserror = "1.0"
